# src/app/Http/Requests/Publisher/UpdateBlgPublisherRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\Publisher;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateBlgPublisherRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'required|string|max:255', 
+            'address' => 'required|string|max:255',
+           
+        ];
+    }
+}
